docs/api/qiskit/0.39/qiskit.algorithms.ImaginaryEvolver.mdx
---
title: ImaginaryEvolver (v0.39)
description: API reference for qiskit.algorithms.ImaginaryEvolver in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.ImaginaryEvolver
---

# ImaginaryEvolver

<Class id="qiskit.algorithms.ImaginaryEvolver" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/evolvers/imaginary_evolver.py" signature="ImaginaryEvolver" modifiers="class">
  Bases: `abc.ABC`

  Pending deprecation: Interface for Quantum Imaginary Time Evolution.

  The ImaginaryEvolver interface has been superseded by the `qiskit.algorithms.time_evolvers.ImaginaryTimeEvolver` interface. This interface will be deprecated in a future release and subsequently removed after that.

  ## Methods

  <span id="qiskit-algorithms-imaginaryevolver-evolve" />

  ### evolve

  <Function id="qiskit.algorithms.ImaginaryEvolver.evolve" signature="ImaginaryEvolver.evolve(evolution_problem)" modifiers="abstract">
    Perform imaginary time evolution $\exp(-\tau H)|\Psi\rangle$.

    Evolves an initial state $|\Psi\rangle$ for an imaginary time $\tau$ under a Hamiltonian $H$, as provided in the `evolution_problem`.

    **Parameters**

    **evolution\_problem** ([`EvolutionProblem`](qiskit.algorithms.EvolutionProblem "qiskit.algorithms.evolvers.evolution_problem.EvolutionProblem")) – The definition of the evolution problem.

    **Return type**

    [`EvolutionResult`](qiskit.algorithms.EvolutionResult "qiskit.algorithms.evolvers.evolution_result.EvolutionResult")

    **Returns**

    Evolution result which includes an evolved quantum state.
  </Function>
</Class>

