docs/api/qiskit/0.43/qiskit.algorithms.ImaginaryEvolver.mdx
---
title: ImaginaryEvolver (v0.43)
description: API reference for qiskit.algorithms.ImaginaryEvolver in qiskit v0.43
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.ImaginaryEvolver
---

# ImaginaryEvolver

<Class id="qiskit.algorithms.ImaginaryEvolver" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/evolvers/imaginary_evolver.py" signature="ImaginaryEvolver" modifiers="class">
  Bases: `ABC`

  Deprecated: Interface for Quantum Imaginary Time Evolution.

  The ImaginaryEvolver interface has been superseded by the `qiskit.algorithms.time_evolvers.ImaginaryTimeEvolver` interface. This interface will be deprecated in a future release and subsequently removed after that.

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.algorithms.evolvers.imaginary_evolver.ImaginaryEvolver` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. Instead, use the interface `qiskit.algorithms.time_evolvers.ImaginaryTimeEvolver`. See [https://qisk.it/algo\_migration](https://qisk.it/algo_migration) for a migration guide.
  </Admonition>

  ## Methods

  <span id="qiskit-algorithms-imaginaryevolver-evolve" />

  ### evolve

  <Function id="qiskit.algorithms.ImaginaryEvolver.evolve" signature="ImaginaryEvolver.evolve(evolution_problem)" modifiers="abstract">
    Perform imaginary time evolution $\exp(-\tau H)|\Psi\rangle$.

    Evolves an initial state $|\Psi\rangle$ for an imaginary time $\tau$ under a Hamiltonian $H$, as provided in the `evolution_problem`.

    **Parameters**

    **evolution\_problem** ([*EvolutionProblem*](qiskit.algorithms.EvolutionProblem "qiskit.algorithms.evolvers.evolution_problem.EvolutionProblem")) – The definition of the evolution problem.

    **Returns**

    Evolution result which includes an evolved quantum state.

    **Return type**

    [*EvolutionResult*](qiskit.algorithms.EvolutionResult "qiskit.algorithms.evolvers.evolution_result.EvolutionResult")
  </Function>
</Class>

